# hiva-ijca-task

./: README.md  finetune.py  finetune_with_mi.py  mi_callback_hidden.py  pyproject.toml
transformers/src/transformers/models/distilbert/: modeling_distilbert.py
